Sun Nov 23 09:57:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/tds/query.c:
	- use iconv for input parameters

Sat Nov 22 17:59:36 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h include/cspublic.h
	* src/ctlib/cs.c src/ctlib/ct.c
	* src/tds/convert.c src/tds/token.c
	- SYBUNIVARCHAR handling
	
Sat Nov 22 17:49:12 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsiconv.h
	* src/tds/iconv.c src/tds/login.c src/tds/query.c
	* src/tds/read.c src/tds/write.c
	- Add message suppression to TDSICONVINFO. utf_[12] unit tests now pass.  
	* src/server/login.c move tds_iconv() call out of assert.  
	
Sat Nov 22 18:16:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/odbc_checks.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- renamed henv/hdbc attributes to env/dbc

Sat Nov 22 17:32:29 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c: reverse some BLOB handling
	* src/tds/token.c:
	- remove libgen.h dependency
	- some fixes for ODBC
	- some fixes for UTF-8 client
	- do not core if dumping is enabled
	* src/tds/unittests/common.c:
	- do not force 512 as packet size
	* src/tds/unittests/flags.c src/tds/unittests/utf8_1.c:
	- make them work
	* src/tds/util.c: print (null) on null strings
	* src/tds/write.c: new style comment..

Sun Nov 16 19:09:13 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: reformatted to avoid warning in gcc
	* src/tds/token.c:
	- some fixes and comments

Sun Nov 16 02:56:40 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c src/tds/query.c src/tds/read.c
	* src/tds/token.c src/tds/util.c src/tds/write.c
	- support partial UTF-8 characters in read_and_convert()
	- distinguish between client and wire sizes in tds_get_data()
	- better logging, support unsigned ints	
	* include/tds.h include/tdsiconv.h reindented