@@ -8,7 +8,7 @@ anyone else can post a patch to Source Forge.
 In this way we can communicate with each
 other about the project's priorities and needs.  
 
-To Do List	$Id: TODO,v 1.80 2003/11/23 08:59:08 freddy77 Exp $
+To Do List	$Id: TODO,v 1.81 2003/11/23 09:12:34 freddy77 Exp $
 ------------
 Broken:
 . Undelimited data files should be read w/ tds_iconv_fread().
@@ -19,7 +19,7 @@ For 0.62 version:
     (write functions to append to and search the TDSSOCKET::iconv_info array)
     DONE
   - convert string using input parameters
-    DONE
+    DONE (some testing needed)
   - finish support for no-GNU iconv (indirect conversion see src/tds/iconv.c)
     (it affect UTF-8 client)
   - borrow GNU's libiconv m4 macro to test/provide EILSEQ
