@@ -66,7 +66,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: read.c,v 1.74 2003/11/22 22:54:16 jklowden Exp $";
+static char software_version[] = "$Id: read.c,v 1.75 2003/11/23 09:12:34 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 static int read_and_convert(TDSSOCKET * tds, const TDSICONVINFO * iconv_info, TDS_ICONV_DIRECTION io,
 			    size_t * wire_size, char **outbuf, size_t * outbytesleft);
@@ -606,12 +606,7 @@ read_and_convert(TDSSOCKET * tds, const TDSICONVINFO * iconv_info, TDS_ICONV_DIR
 
 		/* Convert chunk and write to dest. */
 		bufp = temp; /* always convert from start of buffer */
-		suppress->eilseq = *wire_size > 0; /* EILSEQ matters only on the last chunk. */
-		if( io == to_client && temp[0] == 'E') { /* debugging tds/unitest/utf_1 */
-			tdsdump_log(TDS_DBG_NETWORK, "\tDebugging: bufleft %d, outbytesleft %u\n", bufleft, *outbytesleft);
-			tdsdump_log(TDS_DBG_NETWORK, "\tDebugging: tds_iconv input buffer:\n\t%D", bufp, bufleft);
-
-		}		
+		suppress->einval = *wire_size > 0; /* EINVAL matters only on the last chunk. */
 		if (-1 == tds_iconv(tds, iconv_info, to_client, &bufp, &bufleft, outbuf, outbytesleft)) {
 			tdsdump_log(TDS_DBG_NETWORK, "%L Error: read_and_convert: tds_iconv returned errno %d\n", errno);
 			if (errno != EILSEQ) {
