@@ -1,3 +1,7 @@
+Sun Nov 23 10:12:02 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/iconv.c src/tds/read.c:
+	- small fixes for iconv
+
 Sun Nov 23 09:57:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* TODO src/tds/query.c:
 	- use iconv for input parameters
